<resources>
    <string name="app_name">JamCast</string>

    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">09CBA5D1</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="drawer_mylist_title">My List</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="nav_header_username">Username</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">UAMP_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for UAMP</string>

    <string name="stop_casting">Stop Casting</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    
    <!-- menu -->
    <string name="menu_add">Add Songs</string>
    <string name="menu_clear">Clear</string>

    <string name="play_mode_all">All</string>
    <string name="play_mode_shuffle">Shuffle</string>
    <string name="play_mode_repeat">Single Repeat</string>
    <string name="play_mode_ab_loop">AB Loop</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="add_to_list">Add to play list</string>
    <string name="remove_select">Remove from list</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="remove_file_from_list">Remove \n%s \nfrom this list?　(Would not delete this file)</string>
    <string name="volume_control">Volume</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_list_all">Clear all of this list? (Would not delete these file)</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="range_invalid">Range is invalid</string>
    <string name="mark_a">Mark A</string>
    <string name="mark_b">Mark B</string>
    <string name="must_be_less_than_song_duration">must be less than song duration</string>
    <string name="song_list_empty">Song list is empty</string>
    <string name="list_empty">Play list is empty. Try to use \"add\" button to add songs to your list!</string>
    <string name="play_mode_video">Video</string>
    <string name="browse_jamcast">Default List</string>
    <string name="browse_jamcast_subtitle"></string>
    <string name="menu_add_list">Add List</string>
    <string name="add_list_dialog_title">List Name (ex. My Favorite</string>
    <string name="add_list_dialog_desc">Descrtption</string>
</resources>
