<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >




    <item
        android:id="@+id/action_settings"
        android:title=""
        android:icon="@drawable/baseline_more_vert_white_24"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_add_list"
                android:title="@string/menu_add_list"
                android:icon="@drawable/baseline_add_black_24"
                app:showAsAction="ifRoom|withText"
                android:visible="false"/>

            <item
                android:id="@+id/action_add"
                android:title="@string/menu_add"
                android:icon="@drawable/baseline_add_black_24"
                app:showAsAction="ifRoom|withText"
                android:visible="false"/>

            <item
                android:id="@+id/action_clear"
                android:title="@string/menu_clear"
                android:icon="@drawable/baseline_clear_black_24"
                app:showAsAction="ifRoom|withText"
                android:visible="false"/>

        </menu>
    </item>



    <item
        android:id="@+id/action_selectAll"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>


</menu>